--- a/index.html
+++ b/index.html
@@ -4,86 +4,187 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+
 <style>
-body { font-family: system-ui; padding:16px; }
-button { width:100%; padding:16px; margin-bottom:10px; }
-.primary{background:#0a7cff;color:#fff}
-.secondary{background:#e0e0e0}
-.danger{background:#e53935;color:#fff}
-input,select{width:100%;padding:12px;margin-bottom:8px}
-#formBox,#historyBox{display:none}
+body { font-family: system-ui; padding:16px; background:#fafafa; }
+h2 { font-size:26px; margin-bottom:6px; }
+#username { font-size:20px; }
+#role { font-size:18px; color:#555; margin-bottom:16px; }
+
+button {
+  width:100%; padding:16px; font-size:18px;
+  border-radius:10px; border:none; margin-bottom:10px;
+}
+.primary { background:#0a7cff; color:#fff; }
+.secondary { background:#e0e0e0; }
+.danger { background:#e53935; color:#fff; }
+
+input, select {
+  width:100%; padding:12px; font-size:16px;
+  margin-bottom:8px; border-radius:8px; border:1px solid #ccc;
+}
+
+#formBox, #historyBox { display:none; }
 </style>
 </head>
+
 <body>
 
-<h2>ระบบจองรถ</h2>
+<h2>ระบบจองรถ หก-มน.</h2>
 <div id="username"></div>
 <div id="role"></div>
 
 <button id="mainBtn" class="primary"></button>
 <button id="subBtn" class="secondary"></button>
+
 <div id="driverBox"></div>
 
+<!-- ================= FORM ================= -->
 <div id="formBox">
-  <h3>ฟอร์มจอง</h3>
+  <h3 id="formTitle">ฟอร์มจองรถ</h3>
+
   <input type="date" id="booking_date">
   <input type="time" id="booking_time">
+
+  <!-- ✅ ประเภทรถ -->
+  <select id="vehicle_type">
+    <option value="">-- เลือกรถ --</option>
+    <option value="ไม่ระบุ">ไม่ระบุ</option>
+    <option value="รถเก๋ง">รถเก๋ง</option>
+    <option value="รถกระบะ">รถกระบะ</option>
+    <option value="รถตู้">รถตู้</option>
+  </select>
+
+  <!-- ✅ จำนวนผู้โดยสาร -->
+  <input type="number" id="passenger_count" placeholder="จำนวนผู้โดยสาร">
+
   <input type="text" id="pickup_location" placeholder="จุดรับ">
   <input type="text" id="dropoff_location" placeholder="จุดส่ง">
   <input type="text" id="contact_mobile" placeholder="เบอร์ติดต่อ">
-  <button onclick="submitBooking()" class="primary">บันทึก</button>
+
+  <button class="primary" onclick="submitBooking()">บันทึก</button>
+  <button class="secondary" onclick="closeForm()">ยกเลิก</button>
 </div>
 
 <div id="historyBox"></div>
 
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbwdQH6tF0IV5KCrmOrA2bKe9kJKJkqHR1upjVR9q_ixgvgI7zxeTFVVlGBS9p9BH2sRgA/exec";
-let userId="", role="", mobile="";
+let userId = "";
+let role = "";
+let mobile = "";
+let displayName = "";
 
-async function init(){
-  await liff.init({liffId:"2008934745-qU0fPztf"});
-  if(!liff.isLoggedIn()) liff.login();
+async function init() {
+  await liff.init({ liffId:"2008934745-qU0fPztf" });
+  if (!liff.isLoggedIn()) liff.login();
+
   const p = await liff.getProfile();
   userId = p.userId;
-  username.innerText = p.displayName;
+  displayName = p.displayName;
+  username.innerText = displayName;
 
-  const r = await fetch(ENDPOINT,{
+  const res = await fetch(ENDPOINT,{
     method:"POST",
     body:JSON.stringify({
       action:"auto_register",
       line_user_id:userId,
-      display_name:p.displayName
+      display_name:displayName
     })
   }).then(r=>r.json());
 
-  role = r.role;
-  mobile = r.mobile||"";
+  role = res.role;
+  mobile = res.mobile || "";
   render();
 }
 
-function render(){
+function render() {
   role === "driver"
-    ? mainBtn.innerText="กรอกงานเอง"
-    : mainBtn.innerText="จองรถ";
+    ? roleBox("บทบาท: พนักงานขับรถ")
+    : roleBox("บทบาท: ผู้ใช้งานทั่วไป");
 
-  mainBtn.onclick = ()=>{
-    formBox.style.display="block";
-    contact_mobile.value = mobile;
-  };
+  if (role === "driver") {
+    mainBtn.innerText = "กรอกงานเอง";
+    formTitle.innerText = "ฟอร์มกรอกงาน (พนักงานขับรถ)";
+  } else {
+    mainBtn.innerText = "จองรถพร้อมคนขับ";
+    formTitle.innerText = "ฟอร์มจองรถพร้อมคนขับ";
+  }
 
-  subBtn.innerText="ประวัติ";
-  subBtn.onclick = ()=>alert("ดึงจาก sheet ต่อได้");
+  mainBtn.onclick = showForm;
 
-  if(role==="user"){
-    driverBox.innerHTML=`
-      <button class="secondary" onclick="registerDriver()">ลงทะเบียนเป็นพนักงานขับรถ</button>`;
+  subBtn.innerText = "ดูประวัติ";
+  subBtn.onclick = () => alert("TODO: ดึงจาก sheet");
+
+  driverBox.innerHTML = "";
+  if (role === "user") {
+    driverBox.innerHTML = `
+      <button class="secondary" onclick="registerDriver()">
+        ลงทะเบียนเป็นพนักงานขับรถ
+      </button>
+    `;
   }
 }
 
-async function registerDriver(){
-  const m = prompt("เบอร์โทร:");
-  if(!m) return;
-  const r = await fetch(ENDPOINT,{
+function roleBox(text){
+  document.getElementById("role").innerText = text;
+}
+
+function showForm() {
+  formBox.style.display = "block";
+  contact_mobile.value = mobile;
+}
+
+function closeForm() {
+  formBox.style.display = "none";
+}
+
+function isEmpty(v) {
+  return !v || v.toString().trim() === "";
+}
+
+async function submitBooking() {
+  if (isEmpty(booking_date.value)) return alert("กรุณาเลือกวันที่");
+  if (isEmpty(booking_time.value)) return alert("กรุณาเลือกเวลา");
+  if (isEmpty(vehicle_type.value)) return alert("กรุณาเลือกประเภทรถ");
+  if (isEmpty(passenger_count.value) || passenger_count.value <= 0)
+    return alert("กรุณาระบุจำนวนผู้โดยสาร");
+  if (isEmpty(pickup_location.value)) return alert("กรุณาระบุจุดรับ");
+  if (isEmpty(dropoff_location.value)) return alert("กรุณาระบุจุดส่ง");
+  if (isEmpty(contact_mobile.value)) return alert("กรุณาระบุเบอร์ติดต่อ");
+
+  const action =
+    role === "driver" ? "driver_create_booking" : "create_booking";
+
+  const res = await fetch(ENDPOINT,{
+    method:"POST",
+    body:JSON.stringify({
+      action,
+      line_user_id: userId,
+      driver_name: displayName,
+      booking_date: booking_date.value,
+      booking_time: booking_time.value,
+      vehicle_type: vehicle_type.value,
+      passenger_count: passenger_count.value,
+      pickup_location: pickup_location.value.trim(),
+      dropoff_location: dropoff_location.value.trim(),
+      contact_mobile: contact_mobile.value.trim()
+    })
+  }).then(r=>r.json());
+
+  if (res.success) {
+    alert("บันทึกเรียบร้อย");
+    location.reload();
+  } else {
+    alert("เกิดข้อผิดพลาด");
+  }
+}
+
+async function registerDriver() {
+  const m = prompt("กรุณาระบุเบอร์โทร");
+  if (!m) return;
+
+  const res = await fetch(ENDPOINT,{
     method:"POST",
     body:JSON.stringify({
       action:"register_driver",
@@ -92,26 +193,12 @@ async function registerDriver(){
     })
   }).then(r=>r.json());
 
-  if(r.success){ alert("สำเร็จ"); location.reload(); }
-  else alert("เบอร์ไม่ถูกต้อง");
-}
-
-async function submitBooking(){
-  const r = await fetch(ENDPOINT,{
-    method:"POST",
-    body:JSON.stringify({
-      action: role==="driver"?"driver_create_booking":"create_booking",
-      line_user_id:userId,
-      driver_name: username.innerText,
-      booking_date:booking_date.value,
-      booking_time:booking_time.value,
-      pickup_location:pickup_location.value,
-      dropoff_location:dropoff_location.value,
-      contact_mobile:contact_mobile.value
-    })
-  }).then(r=>r.json());
-
-  if(r.success){ alert("บันทึกแล้ว"); location.reload(); }
+  if (res.success) {
+    alert("ลงทะเบียนเป็นพนักงานขับรถแล้ว");
+    location.reload();
+  } else {
+    alert("เบอร์ไม่ถูกต้อง");
+  }
 }
 
 init();
